# artifacts/api-server/src/routes/index.ts
@@ -5,6 +5,7 @@ import appsRouter from "./apps.js";
 import messagesRouter from "./messages.js";
 import adminRouter from "./admin.js";
 import setupRouter from "./setup.js";
+import projectsRouter from "./projects.js";
 
 const router: IRouter = Router();
 
@@ -13,6 +14,7 @@ router.use("/auth", authRouter);
 router.use("/apps", appsRouter);
 router.use("/messages", messagesRouter);
 router.use("/admin", adminRouter);
+router.use("/projects", projectsRouter);
 router.use(setupRouter);
 
 export default router;
